--- a/IdeaProjects/OldDrive/OldDrive/pom.xml
+++ b/IdeaProjects/OldDrive/OldDrive/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.7</version>
+		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.personalproject.eu</groupId>
@@ -78,6 +78,12 @@
 			<optional>true</optional>
 		</dependency>
 
+        <!--BCRYPT-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!--TESTS-->
         <dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -86,7 +92,6 @@
 		</dependency>
 
         <!--SECURITY-->
-
         <dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
